@startuml

title __KILLKARDASHIANS's Class Diagram__\n

  namespace com.company {
    class com.company.GamePanel {
    }
  }
  

  namespace com.company {
    class com.company.KeyChecker {
    }
  }
  

  namespace com.company {
    class com.company.Main {
    }
  }
  

  namespace com.company {
    class com.company.MainFrame {
    }
  }
  

  namespace com.company {
    class com.company.Missile {
    }
  }
  

  namespace com.company {
    class com.company.Obstacle {
    }
  }
  

  namespace com.company {
    class com.company.ObstacleMissile {
    }
  }
  

  namespace com.company {
    class com.company.ParseLevel {
    }
  }
  

  namespace com.company {
    class com.company.Player {
    }
  }
  

  namespace com.company {
    class com.company.PlayerMissile {
    }
  }
  

  namespace com.company {
    abstract class com.company.Sprites {
    }
  }
  

  namespace com.company {
    class com.company.Wall {
    }
  }
  

  com.company.GamePanel .up.|> java.awt.event.ActionListener
  com.company.GamePanel -up-|> javax.swing.JPanel
  com.company.GamePanel o-- com.company.Player : player
  com.company.KeyChecker -up-|> java.awt.event.KeyAdapter
  com.company.KeyChecker o-- com.company.GamePanel : panel
  com.company.MainFrame -up-|> javax.swing.JFrame
  com.company.Missile -up-|> com.company.Sprites
  com.company.Obstacle -up-|> com.company.Sprites
  com.company.ObstacleMissile -up-|> com.company.Missile
  com.company.Player -up-|> com.company.Sprites
  com.company.PlayerMissile -up-|> com.company.Missile
  com.company.Sprites o-- com.company.GamePanel : panel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
